# mamestagram-pp-rs

./: Cargo.toml
resources/: taiko-diffcalc-test.osu
src/: lib.rs  mods.rs
src/any/: attributes.rs
src/any/difficulty/: gradual.rs  mod.rs
src/any/performance/: gradual.rs
src/catch/difficulty/: gradual.rs
src/catch/difficulty/skills/: movement.rs
src/catch/performance/: calculator.rs  gradual.rs  mod.rs
src/mania/: pp.rs
src/mania/difficulty/: gradual.rs
src/mania/performance/: gradual.rs  mod.rs
src/mania/skills/: strain.rs
src/model/: mods.rs
src/model/beatmap/: attributes.rs
src/model/control_point/: timing.rs
src/osu/: attributes.rs  mod.rs  object.rs  pp.rs  strains.rs
src/osu/difficulty/: gradual.rs  mod.rs  object.rs  scaling_factor.rs
src/osu/difficulty/legacy_score/: miss_calculator.rs  mod.rs  simulator.rs  utils.rs
src/osu/difficulty/skills/: aim.rs  flashlight.rs  mod.rs  reading.rs  speed.rs
src/osu/performance/: calculator.rs  gradual.rs  mod.rs
src/osu_2019/: pp.rs
src/taiko/: attributes.rs
src/taiko/difficulty/: gradual.rs  mod.rs
src/taiko/difficulty/rhythm/data/: same_rhythm_hit_object_grouping.rs
src/taiko/difficulty/skills/: color.rs  reading.rs  rhythm.rs  stamina.rs
src/taiko/performance/: calculator.rs  gradual.rs  mod.rs
src/util/: difficulty.rs  special_functions.rs  strains_vec.rs  sync.rs
tests/: decode.rs  difficulty.rs  osu_lazer_2026.rs  performance.rs  taiko_lazer_2026.rs
