[package]
name = "mames-pp"
version = "2.0.0"
edition = "2021"
authors = ["MaxOhn <ohn.m@hotmail.de>", "scaldings"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Mamestagram/mamestagram-pp-rs"
documentation = "https://docs.rs/rosu-pp/"
description = "Difficulty and performance calculation for osu!"
keywords = ["osu", "pp", "stars", "performance", "difficulty"]

[features]
default = []
raw_strains = []
sync = []
tracing = ["rosu-map/tracing"]

[dependencies]
rosu-map = { git = "https://github.com/MaxOhn/rosu-map" }
rosu-mods = { version = "0.3.0" }

[dev-dependencies]
proptest = "1.4.0"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3